--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -5,12 +5,9 @@
 {% block title %}Welcome to LinkVault API{% endblock %}
 
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-  <title>LinkVault | Secure Your Links</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-black text-white font-sans">
+
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+   <link rel="stylesheet" href="{{ url_for('static', filename='dist/output.css') }}" />
   <!-- Hero Section -->
   <section class="min-h-screen flex flex-col items-center justify-center text-center px-6">
     <h1 class="text-6xl font-extrabold mb-6 text-lime-400">
@@ -81,8 +78,4 @@
       Create Your Account
     </a>
   </section>
-
-</body>
-</html>
 {% endblock %}
-
