--- a/app/templates/noBookmark.html
+++ b/app/templates/noBookmark.html
@@ -20,7 +20,7 @@
     </div>
 
     <!-- heading -->
-    <h1 class="text-5xl font-bold">404 – {{message}}</h1>
+    <h1 class="text-5xl font-bold">{{SCode}} -  {{message}}</h1>
 
     <!-- message -->
     <p class="text-2xl mt-10">Looks like this link got lost in the vault.</p>
