--- a/app/templates/welcome_base.html
+++ b/app/templates/welcome_base.html
@@ -58,6 +58,7 @@
           <a href="{{ url_for('short.home') }}" class="nav-link hover:text-white">Home</a>
           <a href="{{ url_for('bookmarks_api.dashboard2') }}" class="nav-link hover:text-white">Bookmarks</a>
           <a href="{{ url_for('bookmarks_api.list_tags') }}" class="nav-link hover:text-white">Tags</a>
+          <a href="{{ url_for('bookmarks_api.archived_page') }}" class="nav-link hover:text-white">Archived</a>
           <a href="#" class="nav-link hover:text-white">About</a>
         </div>
 
