--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -35,7 +35,7 @@
       </form>
 
       <div class="flex justify-between text-sm text-gray-400 mt-3">
-        <a href="{{ url_for('auth.forgot_password') }}" class="hover:underline text-lime-400">Forgot Password?</a>
+        <!-- <a href="{{ url_for('auth.forgot_password') }}" class="hover:underline text-lime-400">Forgot Password?</a> -->
         <span>
           Don't have an Account?
           <a href="{{ url_for('auth.signup') }}" class="text-lime-400 hover:underline">Sign Up</a>
