--- a/app/templates/tags.html
+++ b/app/templates/tags.html
@@ -1,6 +1,10 @@
 {% extends 'welcome_base.html' %}
 
+
+
 {% block content %}
+
+<link rel="stylesheet" href="{{ url_for('static', filename='dist/output.css') }}" />
 <div class="max-w-7xl mx-auto">
   <!-- Header Section -->
   <div class="mb-8">
