--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,7 +59,7 @@
           <a href="{{ url_for('short.home') }}" class="nav-link hover:text-white">Home</a>
           
           
-          <a href="#" class="nav-link hover:text-white">About</a>
+          <!-- <a href="#" class="nav-link hover:text-white">About</a> -->
         </div>
 
         <!-- Auth Buttons -->
