--- a/app/templates/noBookmark.html
+++ b/app/templates/noBookmark.html
@@ -22,12 +22,17 @@
     <!-- heading -->
     <h1 class="text-5xl font-bold">{{SCode}} -  {{message}}</h1>
 
+    {% if subMessage %}
+    <p class="text-xl text-[#a8d135] mt-2">{{ subMessage }}</p>
+    {% endif %}
+
     <!-- message -->
     <p class="text-2xl mt-10">Looks like this link got lost in the vault.</p>
 
     <!-- button -->
     <button
       class="bg-black border border-[#c1e328] text-[#c1e328] px-6 py-3 rounded-lg hover:bg-[#c1e328] hover:text-black mt-8 transition"
+      onclick="window.location.href='{{ url_for('bookmarks_api.dashboard2') }}'"
     >
       Show All Bookmarks
     </button>
