--- a/app/templates/archived.html
+++ b/app/templates/archived.html
@@ -4,11 +4,12 @@
 {% block content %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 <link rel="stylesheet" href="{{ url_for('static', filename='dist/output.css') }}" />
-<h1 class="text-3xl font-bold text-[#b4ff39] mb-8">Archived Bookmarks</h1>
+<section class="max-w-7xl mx-auto mb-20">
+<h1 class="text-3xl font-bold text-[#b4ff39] mb-8 mt-20 ">Archived Bookmarks</h1>
 
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 my-4">
  {% for b in bookmarks %}
- <div class="bg-[#1a1a1a] p-6 rounded-xl shadow-lg border border-gray-800 flex flex-col justify-between">
+ <div class="bg-[#1A1A1A] p-6 rounded-xl shadow-lg border border-gray-800 flex flex-col justify-between border border-gray-800 hover:border-lime-500 transition-all duration-300 hover:shadow-lg hover:shadow-lime-500/20">
   <div class="mb-4 flex justify-between items-start">
      <h2 class="text-xl font-semibold mb-2 text-white">{{ b.title }}</h2>
      
@@ -24,11 +25,12 @@
       {% endif %}
      </button>
   </div>
-  <p class="text-gray-400 mb-3">{{ b.url }}</p>
 
+  <a href="{{ http_url(b.url) }}" target="_blank"
+    class="text-gray-400 text-xl break-all hover:text-[#c1e328] transition" onclick="event.stopPropagation()">
+    🔗{{ b.url }}
+  </a>
   
-
-
 
 
  </div>
@@ -36,7 +38,7 @@
  <p class="text-gray-400">No archived bookmarks.</p>
  {% endfor %}
 </div>
-
+</section>
 <script>
 
   const USER_ID = {{ user_id }};
