--- a/app/templates/tag_filter.html
+++ b/app/templates/tag_filter.html
@@ -11,7 +11,7 @@
 <section class="mt-12 w-full flex flex-col items-center "> <!-- HEADER ROW -->
  <div class="w-full max-w-6xl flex items-center justify-between px-4 mb-8"> <!-- CENTER TITLE -->
 
-  <h2 class="text-3xl font-bold text-lime-400 flex-1"> Your Bookmarks  with "{{tag}}" tag </h2> <!-- RIGHT ADD BUTTON --> <button
+  <h2 class="text-3xl font-bold text-lime-400 flex-1">Filtered Bookmarks</h2> <!-- RIGHT ADD BUTTON --> <button
    onclick="openAddModal()"
    class="px-4 py-2 border border-[#b4ff39] text-[#b4ff39] rounded-lg transition-all duration-200 hover:bg-[#b4ff39] hover:text-black neon-hover flex items-center gap-2">
    <i data-feather="plus"></i> Add Bookmark </button>
