--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -1,17 +1,3 @@
-<!-- <nav
-  class="flex items-center justify-between bg-[#121212] px-6 py-3 border-b border-[#2A2A2A]"
->
-  <div class="flex items-center space-x-3">
-    <button id="menu-btn" class="focus:outline-none" title="menu-btn">
-      <i data-feather="menu" class="text-[#c1e328]"></i>
-    </button>
-    <h1 class="text-xl font-bold text-[#c1e328]">LinkVault</h1>
-  </div>
-
-  <div>
-    <i data-feather="user" class="text-[#c1e328] cursor-pointer"></i>
-  </div>
-</nav> -->
 
 <style>
     body {
@@ -47,7 +33,7 @@
   </style>
 
 
-<!-- 🌐 NAVIGATION BAR -->
+<!-- NAVIGATION BAR -->
   <nav class="fixed top-0 w-full z-50 border-b border-gray-800 bg-[#0b0b0b]/90 backdrop-blur-lg shadow-lg">
     <div class="max-w-7xl mx-auto px-6">
       <div class="flex justify-between items-center h-16">
@@ -63,8 +49,6 @@
           <a href="{{ url_for('bookmarks_api.dashboard2') }}" class="nav-link hover:text-white">Bookmarks</a>
           <a href="{{ url_for('bookmarks_api.list_tags') }}" class="nav-link hover:text-white">Tags</a>
           <a href="{{ url_for('bookmarks_api.archived_page') }}" class="nav-link hover:text-white">Archived</a>
-
-          <a href="#" class="nav-link hover:text-white">About</a>
         </div>
 
         <div class="flex items-center space-x-4">
@@ -74,7 +58,6 @@
                     transition-all duration-200 hover:bg-[#b4ff39] hover:text-black neon-hover">
             Logout
           </a>
-
         </div>
       </div>
     </div>
