--- a/app/templates/all_bookmarks.html
+++ b/app/templates/all_bookmarks.html
@@ -8,6 +8,8 @@
   rel="stylesheet"
   href="{{ url_for('static', filename='dist/output.css') }}"
 />
+<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename=';.ico') }}">
+
 
 <h1 class="text-3xl font-bold mb-6 text-center text-[#c1e328]">
   All Bookmarks
