--- a/app/templates/archived.html
+++ b/app/templates/archived.html
@@ -4,6 +4,8 @@
 {% block content %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 <link rel="stylesheet" href="{{ url_for('static', filename='dist/output.css') }}" />
+<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='logo.ico') }}">
+
 <section class="max-w-7xl mx-auto mb-20">
 <h1 class="text-3xl font-bold text-[#b4ff39] mb-8 mt-20 ">Archived Bookmarks</h1>
 
