--- a/app/templates/welcome_base.html
+++ b/app/templates/welcome_base.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{% block title %}LinkVault{% endblock %}</title>
-
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='logo.ico') }}">
   <link
     rel="stylesheet"
     href="{{url_for('static' ,filename='dist/output.css')}}">
